--- a/conf/tobira-auth.env
+++ b/conf/tobira-auth.env
@@ -1,7 +1,24 @@
-# This configuration files defines environment variables for tobira-auth service.
+# This configuration file defines environment variables for tobira-auth service.
 # Some framework specific variables can also be set here,
 # see https://sanic.dev/en/guide/deployment/configuration.html#builtin-values.
 # Include this file in systemd service file to configure your tobira-auth instance properly.
+
+# Whether to enable the auth callback endpoint, value=true, or not, value=false.
+# Due to Tobira configuration only one endpoint needs to be provided, auth or login callback.
+# You can enable/disable the unused endpoint here.
+# Default value: false
+TOBIRA_AUTH_ENABLE_AUTH_CALLBACK="true"
+
+# Whether to enable the login callback endpoint, value=true, or not, value=false.
+# Due to Tobira configuration only one endpoint needs to be provided, auth or login callback.
+# You can enable/disable the unused endpoint here.
+# Default value: false
+TOBIRA_AUTH_ENABLE_LOGIN_CALLBACK="true"
+
+# The dummy user service provide test data endpoints for auth/login callbacks.
+# DO NOT USE IT IN PRODUCTION!
+# Default value: false
+TOBIRA_AUTH_ENABLE_DUMMY_USER_SERVICE="true"
 
 # Header name containing the username value for auth callback.
 # Default value: x-tobira-username
@@ -17,6 +34,6 @@ TOBIRA_AUTH_DISPLAY_NAME_HEADER="x-tobira-user-display-name"
 TOBIRA_AUTH_EMAIL_HEADER="x-tobira-user-email"
 
 # Header name containing the user affiliations value for auth callback.
-# The header value may include multiple affiliations, concatenated by ','.
+# The header value may include multiple affiliations concatenated by ','.
 # Default value: x-shib-affiliation
 TOBIRA_AUTH_AFFILIATION_HEADER="x-shib-affiliation"
