--- a/scripts/tobira-auth.service
+++ b/scripts/tobira-auth.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=Tobira-Auth service
-Documentation=
+Documentation=https://github.com/elan-ev/tobira-auth-callback-service/
 Wants=network.target
 After=network-online.target
 
@@ -8,10 +8,10 @@ After=network-online.target
 Type=exec
 #User=tobiraauth
 #Group=tobiraauth
-WorkingDirectory=/opt/tobiraauth/src
-Environment=PYTHONPATH=/opt/tobiraauth/src:$PYTHONPATH
-EnvironmentFile=/opt/tobiraauth/conf/tobira-auth-env
-ExecStart=/opt/tobiraauth/venv/bin/sanic tobiraauth.server:create_app --no-motd
+WorkingDirectory=/opt/tobira-auth/src
+Environment=PYTHONPATH=/opt/tobira-auth/src:$PYTHONPATH
+EnvironmentFile=/opt/tobira-auth/conf/tobira-auth.env
+ExecStart=/opt/tobira-auth/venv/bin/sanic tobiraauth.server:create_app --no-motd
 Restart=on-failure
 RestartSec=1
 
