Common SAML2 attribute names should be default
Default header names are updated to common SAML names.

--- a/conf/tobira-auth.env
+++ b/conf/tobira-auth.env
@@ -21,19 +21,19 @@ TOBIRA_AUTH_ENABLE_LOGIN_CALLBACK="true"
 TOBIRA_AUTH_ENABLE_DUMMY_USER_SERVICE="true"
 
 # Header name containing the username value for auth callback.
-# Default value: x-tobira-username
-TOBIRA_AUTH_USERNAME_HEADER="x-tobira-username"
+# Default value: uniqueID
+TOBIRA_AUTH_USERNAME_HEADER="uniqueID"
 
 # Header name containing the display name value for auth callback.
 # This is the human readable name (firstname, lastname) of the user.
-# Default value: x-tobira-user-display-name
-TOBIRA_AUTH_DISPLAY_NAME_HEADER="x-tobira-user-display-name"
+# Default value: displayName
+TOBIRA_AUTH_DISPLAY_NAME_HEADER="displayName"
 
 # Header name containing the email address value for auth callback.
-# Default value: x-tobira-user-email
-TOBIRA_AUTH_EMAIL_HEADER="x-tobira-user-email"
+# Default value: mail
+TOBIRA_AUTH_EMAIL_HEADER="mail"
 
 # Header name containing the user affiliations value for auth callback.
-# The header value may include multiple affiliations concatenated by ','.
-# Default value: x-shib-affiliation
-TOBIRA_AUTH_AFFILIATION_HEADER="x-shib-affiliation"
+# The header value may include multiple affiliations concatenated by ';'.
+# Default value: affiliation
+TOBIRA_AUTH_AFFILIATION_HEADER="affiliation"
