--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,5 +1,6 @@
 python-dotenv==1.0.0
 pytest
-pytest_httpx
+# pytest_httpx should be same as httpx version in requirements.txt
+pytest_httpx==0.26.0
 pytest-asyncio
 sanic-testing
