Admin users definition

--- a/src/tobiraauth/conf/tobira-auth.env
+++ b/src/tobiraauth/conf/tobira-auth.env
@@ -37,3 +37,8 @@ TOBIRA_AUTH_EMAIL_HEADER="mail"
 # The header value may include multiple affiliations concatenated by ';'.
 # Default value: affiliation
 TOBIRA_AUTH_AFFILIATION_HEADER="affiliation"
+
+# Comma-separated list of usernames of users who should be given
+# administrative rights in Tobira.
+# Default value:
+TOBIRA_AUTH_ADMIN_USERS_USERNAME=""
