--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "tobira-auth-callback-service"
+name = "tobira-auth"
 version = "0.1.0"
 description = "This project is a sample implementation of the Tobira auth-callback and login-callback webservice."
 authors = [
@@ -32,3 +32,4 @@ pythonpath = "src"
 addopts = [
     "--import-mode=importlib",
 ]
+
