--- a/src/tobiraauth/conf/tobira-auth.env
+++ b/src/tobiraauth/conf/tobira-auth.env
@@ -42,3 +42,8 @@ TOBIRA_AUTH_AFFILIATION_HEADER="affiliation"
 # administrative rights in Tobira.
 # Default value:
 TOBIRA_AUTH_ADMIN_USERS_USERNAME=""
+
+# Comma-separated list of email addresses of users who should be given
+# administrative rights in Tobira.
+# Default value:
+TOBIRA_AUTH_ADMIN_USERS_MAIL=""
