Fallback to given name and surname headers if display name not set

--- a/src/tobiraauth/conf/tobira-auth.env
+++ b/src/tobiraauth/conf/tobira-auth.env
@@ -29,6 +29,25 @@ TOBIRA_AUTH_USERNAME_HEADER="uniqueID"
 # Default value: displayName
 TOBIRA_AUTH_DISPLAY_NAME_HEADER="displayName"
 
+# Header name containing the given name value for auth callback.
+# This is the human readable firstname of the user.
+# Default value: givenName
+TOBIRA_AUTH_GIVEN_NAME_HEADER="givenName"
+
+# Header name containing the surname value for auth callback.
+# This is the human readable lastname of the user.
+# Default value: surname
+TOBIRA_AUTH_SURNAME_HEADER="surname"
+
+# In case of display name value is not set but given name and surname
+# are present, the format of display name can be configured here.
+# The template variables should be written in between of curly brackets like {variable}.
+# This variables are available:
+#   - given_name: The value of given name header
+#   - surname: The value of surname header
+# Default value: {given_name} {surname}
+TOBIRA_AUTH_DISPLAY_NAME_FORMAT="{given_name} {surname}"
+
 # Header name containing the email address value for auth callback.
 # Default value: mail
 TOBIRA_AUTH_EMAIL_HEADER="mail"
