Custom roles and home organization header configuration

--- a/src/tobiraauth/conf/tobira-auth.env
+++ b/src/tobiraauth/conf/tobira-auth.env
@@ -57,6 +57,19 @@ TOBIRA_AUTH_EMAIL_HEADER="mail"
 # Default value: affiliation
 TOBIRA_AUTH_AFFILIATION_HEADER="affiliation"
 
+# Header name containing the shibboleth users home organization value for auth callback.
+# Default value: homeOrganization
+TOBIRA_AUTH_HOME_ORGANIZATION="homeOrganization"
+
+# Comma-separated list of custom roles each user should have set.
+# You can use variables. They should be written in between of curly brackets like {variable}.
+# This variables are available:
+#   - username: The value of username header
+#   - email: The value of email header
+#   - home_organization: The value of home organization header
+# Default value:
+TOBIRA_AUTH_CUSTOM_ROLES=""
+
 # Comma-separated list of usernames of users who should be given
 # administrative rights in Tobira.
 # Default value:
